test/error/end_label_interface_wrong.sv
// pattern: element "yes" has mismatched end label "no"
interface yes;
endinterface : no
